# FORGE-tauri

./: .env  .env.example  .gitignore  GITHUB_ACTIONS_SETUP.md  PUSH_TO_GITHUB.md  REBUILD_INSTRUCTIONS.txt  SETUP.md  SETUP_INSTRUCTIONS.md  TAURI_BUILD_GUIDE.md  package-lock.json  package.json  replit.md
.github/workflows/: tauri-build.yml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ActivityTimeline.tsx  BackButton.tsx  ComparisonChart.tsx  CourseColumn.tsx  DailyScheduleView.tsx  EndOfDayFeedback.tsx  FeedbackDialog.tsx  Footer.tsx  Header.tsx  IconPicker.tsx  KnowledgeChatDialog.tsx  (+8 more)
script/: auto-schedule.ts  build-sidecar-pkg.ts  build-sidecar.ts
server/: auth.ts  github.ts  index.ts  rateLimit.ts  routes.ts  scheduler.ts  static.ts  storage.ts
server/llm/: courseBuilder.ts  dataReportGenerator.ts  detailsAnalyzer.ts  detailsFilter.ts  detailsGenerator.ts  documentExtractor.ts  feedbackPatterns.ts  gemini.ts  groq.ts  groqDetailsGenerator.ts  ingestPipeline.ts  ingestRag.ts  knowledgeChat.ts  mastery.ts  missionIntelligence.ts  missionRag.ts  openai.ts  patternAnalyzer.ts  planner.ts  planningAssistant.ts  rateLimiter.ts  retriever.ts  smartMissionGenerator.ts  unifiedContext.ts  workloadAnalyzer.ts
server/metrics/: counters.ts
server/services/: pdfExtractor.py
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: package.json
src-tauri/binaries/shims/: onnxruntime-node.cjs
src-tauri/capabilities/: default.json
src-tauri/resources/: .env  .env.example
src-tauri/src/: main.rs
(+29 files in other folders)
