[package]
name = "forge"
version = "0.1.0"
description = "Forge - Personal Engineering Advisor"
authors = ["Forge Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9" }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
